--- a/src/GanttComponents/Pages/TimelineDemo.razor
+++ b/src/GanttComponents/Pages/TimelineDemo.razor
@@ -222,7 +222,10 @@
                          OnZoomLevelChanged="HandleZoomLevelChanged"
                          OnZoomFactorChanged="HandleZoomFactorChanged"
                          OnTaskSelected="HandleTaskSelected" 
-                         OnScrollChanged="HandleScrollChanged" />
+                         OnScrollChanged="HandleScrollChanged"
+                         RowHeight="32"
+                         HeaderMonthHeight="32"
+                         HeaderDayHeight="24" />
         </div>
     </div>
 
