--- a/src/GanttComponents/Pages/TimelineHeaderDemo.razor
+++ b/src/GanttComponents/Pages/TimelineHeaderDemo.razor
@@ -101,7 +101,10 @@
                         <TimelineView Tasks="@DemoTasks"
                                     ZoomLevel="@CurrentZoomLevel"
                                     ZoomFactor="@CurrentZoomFactor"
-                                    OnTaskSelected="@HandleTaskSelected" />
+                                    OnTaskSelected="@HandleTaskSelected"
+                                    RowHeight="32"
+                                    HeaderMonthHeight="32"
+                                    HeaderDayHeight="24" />
                     </div>
                 </div>
             </div>
